--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="https://github.com/TayyebaSadaq" aria-label="GitHub">
                 <img src="images/icons/github.png" alt="GitHub" class="social-icon">
             </a>
-            <a href="https://twitter.com" aria-label="Twitter">
+            <a href="https://x.com/T_yyeba" aria-label="Twitter">
                 <img src="images/icons/twitter.png" alt="Twitter" class="social-icon">
             </a>
         </div>
