adding project to website

--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
                 <img src="images/project/piggybank.png" alt="Piggy Bank" class="project-image">
                 <div class="overlay">Piggy Bank</div>
             </div>
+            <div class="project-tile" onclick="openModal('Women in STEM Blog', 'This was a group project creating a blog to help motivate Women in STEM fields where we worked with JavaScript, HTML and CSS to create a motivational, accessible blog to help Women in our shared field feel seen and heard.', '<br><br>Language: HTML and CSS, JavaScript', 'https://womenin-stem.github.io/')">
+                <img src="images/project/WIS.png" alt="Women in Stem Blog" class="project-image">
+                <div class="overlay">Women in STEM Blog</div>
+            </div>
         </div>
     </section>
     
